hecho el sobre mi, siguiente skills

--- a/index.html
+++ b/index.html
@@ -45,10 +45,83 @@
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
-        
+
 
             </div>
         </div>
+    </section>
+
+    <!-- SECCIÓN SOBRE MÍ -->
+    <section id="sobremi" class="sobremi">
+        <div class="contenido-seccion">
+            <h2>SOBRE MÍ</h2>
+            <p>
+                <span>Hola, soy Endika Acedo</span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+                provident eveniet illo. Repellendus, corporis minima aliquid eligendi voluptates possimus quis officiis
+                temporibus porro molestias et necessitatibus numquam accusamus dolorem voluptatibus.
+            </p>
+
+            <div class="fila">
+                <!-- datos personales -->
+                <div class="col">
+                    <h3>Datos personales</h3>
+                    <ul>
+                        <li>
+                            <strong>Nacimiento</strong>
+                            Bilbao, 07/05/1993
+                        </li>
+                        <li>
+                            <strong>Localización</strong>
+                            Bilabo, Bizkaia
+                        </li>
+                        <li>
+                            <strong>Correo:</strong>
+                            acedogonzalezendika@gmail.com
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- interes -->
+                <div class="col">
+                    <h3>Intereses</h3>
+                    <div class="contenedor-intereses">
+                        <div class="interes">
+                            <i class="fa-solid fa-dog"></i>
+                            <span>ILUN & KAIA</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-headphones"></i>
+                            <span>MÚSICA</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-guitar"></i>
+                            <span>GUITARRA</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-computer"></i>
+                            <span>PROGRAMACIÓN</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-regular fa-futbol"></i>
+                            <span>DEPORTES</span>
+                        </div>
+                        <div class="interes">
+                            <i class="fa-solid fa-gamepad"></i>
+                            <span>VIDEOJUEGOS</span>
+                        </div>
+
+
+                    </div>
+
+                </div>
+            </div>
+            <button>
+                Descargar CV <i class="fa-solid fa-download"></i>
+                <span class="overlay"></span>
+            </button>    
+        </div>
+
     </section>
 </body>
 
