hecha la seccion de  portfolio, solo queda contacto

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <span>React</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>90%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>DOCKER</span>
+                        <span>Docker</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>80%</span>
@@ -225,12 +225,145 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Dedicación</span>
+                        <span>Adaptabilidad</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>100%</span>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SECCIÓN CURRÍCULUM -->
+
+    <section id="curriculum" class="curriculum">
+        <div class="contenido-seccion">
+            <h2>Currículum</h2>
+            <div class="fila">
+                <div class="col izquierda">
+                    <h3>Educación</h3>
+                    <div class="item izq">
+                        <h4>Arte y Multimedia</h4>
+                        <span class="casa">The Bridge Talent Accelerator</span>
+                        <span class="fecha"> 2023</span>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        </p>
+                        <div class="conectori">
+                            <div class="circuloi">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h4>Arte y Multimedia</h4>
+                        <span class="casa">The Bridge Talent Accelerator</span>
+                        <span class="fecha"> 2023</span>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        </p>
+                        <div class="conectori">
+                            <div class="circuloi">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h4>Arte y Multimedia</h4>
+                        <span class="casa">The Bridge Talent Accelerator</span>
+                        <span class="fecha"> 2023</span>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        </p>
+                        <div class="conectori">
+                            <div class="circuloi">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col derecha">
+                    <h3>Experiencia de trabajo</h3>
+                    <div class="item der">
+                        <h4>Desafío de Tripulaciones</h4>
+                        <span class="casa">The Bridge & Aquadat</span>
+                        <span class="fecha">2023</span>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        </p>
+                        <div class="conectord">
+                            <div class="circulod">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item der">
+                        <h4>Proyectos personales</h4>
+                        <span class="casa">The Bridge & Aquadat</span>
+                        <span class="fecha">2023</span>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        </p>
+                        <div class="conectord">
+                            <div class="circulod">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                
+
+            </div>
+        </div>
+    </section>
+
+    <!-- SECCIÓN PORTFOLIO -->
+
+    <section id="portfolio" class="portfolio">
+        <div class="contenido-seccion">
+            <h2>PORTFOLIO</h2>
+            <div class="galeria">
+                <div class="proyecto">
+                    <img src="img/p2.jpg" alt="proyecto1">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografía</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/p2.jpg" alt="proyecto2">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografía</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/p4.jpg" alt="proyecto3">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografía</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/p4.jpg" alt="proyecto4">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografía</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/p6.jpg" alt="proyecto5">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografía</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/p6.jpg" alt="proyecto6">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografía</p>
                     </div>
                 </div>
             </div>
