hecho entero a falta de javascript, terminado mas o menos el mobilefirst

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="logo">
                 <a href="#">Endika Acedo</a>
             </div>
-            <nav id="" nav>
+            <nav id="nav">
                 <ul>
                     <li><a href="#inicio">INICIO</a></li>
                     <li><a href="#sobremi">SOBRE MÍ</a></li>
@@ -45,8 +45,6 @@
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
-
-
             </div>
         </div>
     </section>
@@ -119,7 +117,7 @@
             <button>
                 Descargar CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
-            </button>    
+            </button>
         </div>
 
     </section>
@@ -249,7 +247,9 @@
                         <h4>Arte y Multimedia</h4>
                         <span class="casa">The Bridge Talent Accelerator</span>
                         <span class="fecha"> 2023</span>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat
+                            voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus
+                            nemo laudantium, vero corrupti ipsa modi!
                         </p>
                         <div class="conectori">
                             <div class="circuloi">
@@ -261,7 +261,9 @@
                         <h4>Arte y Multimedia</h4>
                         <span class="casa">The Bridge Talent Accelerator</span>
                         <span class="fecha"> 2023</span>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat
+                            voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus
+                            nemo laudantium, vero corrupti ipsa modi!
                         </p>
                         <div class="conectori">
                             <div class="circuloi">
@@ -273,7 +275,9 @@
                         <h4>Arte y Multimedia</h4>
                         <span class="casa">The Bridge Talent Accelerator</span>
                         <span class="fecha"> 2023</span>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat
+                            voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus
+                            nemo laudantium, vero corrupti ipsa modi!
                         </p>
                         <div class="conectori">
                             <div class="circuloi">
@@ -289,7 +293,9 @@
                         <h4>Desafío de Tripulaciones</h4>
                         <span class="casa">The Bridge & Aquadat</span>
                         <span class="fecha">2023</span>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat
+                            voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus
+                            nemo laudantium, vero corrupti ipsa modi!
                         </p>
                         <div class="conectord">
                             <div class="circulod">
@@ -302,7 +308,9 @@
                         <h4>Proyectos personales</h4>
                         <span class="casa">The Bridge & Aquadat</span>
                         <span class="fecha">2023</span>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus nemo laudantium, vero corrupti ipsa modi!    
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi tenetur facere nihil repellat
+                            voluptatum! Sunt, earum libero. Ipsam sapiente optio, officia accusamus reiciendis natus
+                            nemo laudantium, vero corrupti ipsa modi!
                         </p>
                         <div class="conectord">
                             <div class="circulod">
@@ -312,7 +320,7 @@
                     </div>
                 </div>
 
-                
+
 
             </div>
         </div>
@@ -369,6 +377,58 @@
             </div>
         </div>
     </section>
+
+    <!-- SECCIÓN CONTACTO -->
+    <section id="contacto" class="contacto">
+        <div class="contenido-seccion">
+            <h2>CONTACTO</h2>
+            <div class="fila">
+                <!-- Formulairo -->
+                <div class="col">
+                    <input type="text" placeholder="Tu nombre">
+                    <input type="text" placeholder="Número de teléfono">
+                    <input type="text" placeholder="Correo">
+                    <input type="text" placeholder="Asunto">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <button>
+                        Enviar <i class="fa-solid fa-paper-plane"></i>
+                        <span class="overlay"></span>
+                    </button>
+                </div>
+                <!-- Mapa -->
+                <div class="col">
+                    <div class="contenedorImg">
+                        
+                    </div>
+                    <div class="info">
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i>
+                                Bilbao, Bizkaia
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-mobile"></i>
+                                604844114
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-envelope"></i>
+                                acedogonzalezendika@gmail.com
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!-- FOOTER -->
+    <footer>
+        <a href="#inicio" class="arriba">
+            <i class="fa-solid fa-angles-up"></i>
+        </a>
+        <div class="redes">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
